# app.js
@@ -1,10 +1,14 @@
-'use strict';
+"use strict";
+require("regenerator-runtime/runtime");
 
+require("@babel/register")({
+  presets: ["@babel/preset-env"]
+});
 
-var SwaggerExpress = require('swagger-express-mw');
-var app = require('express')();
-var cors = require('cors');
-var auth = require('./api/helpers/auth');
+var SwaggerExpress = require("swagger-express-mw");
+var app = require("express")();
+var cors = require("cors");
+var auth = require("./api/helpers/auth");
 module.exports = app; // for testing
 
 var config = {
@@ -17,16 +21,19 @@ var config = {
 app.use(cors());
 
 SwaggerExpress.create(config, function(err, swaggerExpress) {
-  if (err) { throw err; }
+  if (err) {
+    throw err;
+  }
 
   // install middleware
   swaggerExpress.register(app);
 
-
   var port = process.env.PORT || 10010;
   app.listen(port);
 
-  if (swaggerExpress.runner.swagger.paths['/login']) {
-    console.log('try this as a post request:\ncurl http://127.0.0.1:' + port + '/login');
+  if (swaggerExpress.runner.swagger.paths["Login"]) {
+    console.log(
+      "try this as a post request:\ncurl http://127.0.0.1:" + port + "/Login"
+    );
   }
 });
